# GPBeam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/gpbeam-cli/: Cargo.toml
crates/gpbeam-cli/src/: lib.rs  main.rs
crates/gpbeam-cli/tests/: exit_codes.rs  mirror_cli.rs  mirror_flush.rs  mirror_status.rs  partial_failure.rs  retry_cloud.rs  safety_flags.rs  version.rs
crates/gpbeam-core/: Cargo.toml
crates/gpbeam-core/src/: backoff.rs  capture.rs  config.rs  copy.rs  credentials.rs  detect.rs  diskguard.rs  eject.rs  error.rs  gopro.rs  ledger.rs  lib.rs  naming.rs  orchestrator.rs  progress.rs  scanner.rs  transfer.rs
crates/gpbeam-core/src/cloud/: mod.rs  nextcloud.rs  worker.rs
crates/gpbeam-core/src/wired/: client.rs  detect.rs  mod.rs  offload.rs
crates/gpbeam-core/tests/: fixtures.rs  offload_e2e.rs
scripts/: macos-install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  cloud_runtime.rs  commands.rs  config_io.rs  keyring_store.rs  lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  popover.html  settings.html  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/lib/: Field.svelte  Field.test.ts  bindings.test.ts  bindings.ts  format.test.ts  format.ts  store.test.ts  store.ts  url.test.ts  url.ts
ui/src/popover/: Popover.svelte  Popover.test.ts  main.ts
ui/src/settings/: Settings.svelte  Settings.test.ts  Settings.wizard.test.ts  Wizard.svelte  Wizard.test.ts  main.test.ts  main.ts  wizard_view.test.ts  wizard_view.ts
ui/src/settings/tabs/: AboutTab.svelte  AboutTab.test.ts  AdvancedTab.svelte  AdvancedTab.test.ts  BehaviorTab.svelte  BehaviorTab.test.ts  CloudTab.svelte  CloudTab.test.ts  DestinationTab.svelte  DestinationTab.test.ts  HistoryTab.svelte  HistoryTab.test.ts
ui/src/test/: setup.ts
