[package]
name = "gpbeam"
edition.workspace = true
version.workspace = true
description = "GPBeam — auto-offload your GoPro on plug-in"

[lib]
name = "gpbeam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-notification = "2"
# Desktop-only plugins kept as plain deps (M1 has no mobile target) so tauri-build
# collects their capability permissions.
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
gpbeam-core = { path = "../crates/gpbeam-core" }
keyring = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
# Enables tauri::test (mock_builder/MockRuntime) for the IPC smoke test that
# invokes real commands through the registered handler. Dev-only: feature
# unification applies it to test builds without touching release artifacts.
tauri = { version = "2", features = ["test"] }
