[package]
name = "gpbeam-core"
edition.workspace = true
version.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
tempfile = "3"
fs4 = "1"
sysinfo = "0.39"
kamadak-exif = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
