[package]
name = "gpbeam-core"
edition.workspace = true
version.workspace = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
tempfile = "3"
fs4 = "1"
sysinfo = "0.39"
kamadak-exif = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "fs", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
async-trait = "0.1"
url = "2"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
toml = "0.8"
md-5 = "0.10"
hex = "0.4"
quick-xml = "0.37"
tokio-util = { version = "0.7", features = ["io"] }
if-addrs = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
wiremock = "0.6"
filetime = "0.2"
